tests/paczka1/small_fuzzy/91940308.err
Error in line 6: iFODkL8m A385 64,1
Error in line 12: 4SNyOIYAL A705 94,8
